# DexSkills

./: .gitignore  README.md  Videos  index.html  pyproject.toml  train_classifier.py
DexSkill_dataset/LH_dataset/: data_1.pt  data_11.pt  data_13.pt  data_15.pt  data_17.pt  data_2.pt  data_20.pt  data_4.pt  data_5.pt  data_6.pt  data_9.pt
DexSkill_dataset/dataset/: data_10.pt  data_13.pt  data_16.pt  data_17.pt  data_18.pt  data_2.pt  data_20.pt  data_21.pt  data_22.pt  data_27.pt  data_28.pt  data_29.pt  data_3.pt  data_30.pt  data_32.pt  data_34.pt  data_35.pt  data_38.pt  data_40.pt  data_42.pt  data_43.pt  data_44.pt  data_45.pt  data_47.pt  data_48.pt  data_51.pt  data_52.pt  data_53.pt  data_56.pt  data_59.pt  data_60.pt  data_62.pt  data_63.pt  data_64.pt  data_66.pt  data_7.pt  data_8.pt
DexSkill_dataset/trained_policy/: Seg_0.1.pth  Seg_20skills_0.1s.pth  Seg_encoder_only.pth  Seg_seperate_pretrain.pth  Seg_state_only.pth
code/: classifier_verification.py  network.py
src/dexskills/: train_model.py
src/dexskills/DexSkill_dataset/LH_dataset/: data_10.pt  data_12.pt  data_14.pt  data_16.pt  data_18.pt  data_19.pt  data_7.pt  data_8.pt
src/dexskills/DexSkill_dataset/dataset/: data_0.pt  data_1.pt  data_11.pt  data_12.pt  data_14.pt  data_15.pt  data_19.pt  data_23.pt  data_24.pt  data_25.pt  data_26.pt  data_31.pt  data_33.pt  data_36.pt  data_37.pt  data_39.pt  data_4.pt  data_41.pt  data_46.pt  data_49.pt  data_5.pt  data_50.pt  data_54.pt  data_55.pt  data_57.pt  data_58.pt  data_6.pt  data_61.pt  data_65.pt  data_67.pt  data_68.pt  data_69.pt  data_70.pt  data_9.pt
src/dexskills/DexSkill_dataset/json_file/: LH_final.json
src/dexskills/DexSkill_dataset/trained_policy/: Seg_20skill_0.1_new.pth  Seg_comparision_recovery.pth  Seg_feature_only.pth  Seg_test.pth
src/dexskills/data/: constants.py  dataset.py
src/dexskills/experiment/: trainer.py
src/dexskills/model/: autoencoder.py  blocks.py  classifier.py  composite.py  trainer.py
static/css/: index.css
